# romscripts

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alphasort  alphasort.sh  archive-to-chd  archive-to-chd.sh  build.py  images-to-chds  images-to-chds.sh  list-ps2-games.py  make7zset.py  pyproject.toml  requirements.txt  rominfo.py
.github/workflows/: build-db.yml  build_db.yml  build_db_33_mame.yml  build_db_34_mame.yml  build_db_65_mame.yml  build_db_68_mame.yml
arcade_db/: README.md  create_db.py  create_workflow.py  queries.py  sort_clones.py  validate_sources.py
arcade_db/mame_db_source/: README.md
arcade_db/shared/: db.py  indexing.py  sources.py  utils.py
arcade_db/sources/: fba_make_xmls.py  mame_dat_download.py
arcade_db/workflow_templates/: build_db_template.yml
arcade_db_build/: README.md  create_db.py  create_workflow.py  shared.py  sort_clones.py  validate_sources.py
arcade_db_build/fba_db_source/: README.md
arcade_db_build/mame_db_source/: README.md
my_json/: amiga_test_rename.json  gba_rename.json  gba_sort.json  genesis_rename.json  nes_rename.json  sms_rename.json  sms_test_sort.json  snes_rename.json
old_code_jsons/: good_codes.json  nointro_codes.json  tosec_codes.json
old_romfile_scripts/: make7zset.py  romname.py
romfile/: romcodes.py  romfile.py  structured_name_info.py  structured_rom_filename.py
scripts/: dvdtoimage
tests/: test_create_db.py  test_indexing.py  test_romcodes.py  test_structured_rom_filename.py
tests_db/: generate_zip_mocks.py  test_mame_2003_fnm_set.py  test_mame_sets.py
(+702 files in other folders)
