[tool.black]
line-length = 120

[tool.poetry]
name = "romscripts"
version = "0.0.1"
description = ""
authors = ["Jim Narey"]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
