[tool.black]
line-length = 120

[tool.poetry]
name = "romscripts"
version = "0.0.1"
description = ""
authors = ["Jim Narey"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.2"
sqlalchemy = "^2.0.28"
psutil = "^5.9.8"
lxml = "^5.2.2"
pandas = "^2.2.3"
click = "^8.3.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
jinja2 = "^3.1.4"
types-lxml = "^2024.4.14"
objgraph = "^3.6.2"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
